@@ -611,6 +611,7 @@
 	- added option "no_execution" to perform testruns without executing the binaries
 	- added device_slot to image_entry and set it in read_softlist_entry()
 	- added missing xmlCleanupParser() call in cleanup_and_exit()
+	- updated WARNINGS in makefile and added clang-specific ones
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
